// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthForm when is not registration renders without crashing 1`] = `
<form
  autocomplete="off"
  class="sc-AxjAm hYYXIy"
  novalidate=""
>
  <fieldset>
    <legend
      class="sc-AxirZ dBtpcc"
    >
      A legend
    </legend>
    <input
      name="isRegistration"
      type="hidden"
      value="NO"
    />
    <div
      class="sc-AxiKw bLDZyO"
    >
      <label
        class="sc-AxhCb ieTFEo"
        for="email"
      >
        E-mail
      </label>
      <input
        aria-invalid="false"
        class="sc-AxhUy ePtFHq"
        id="email"
        name="email"
        placeholder="E-mail"
        type="email"
        value=""
      />
      
    </div>
    <div
      class="sc-AxiKw bLDZyO"
    >
      <label
        class="sc-AxhCb ieTFEo"
        for="password"
      >
        Password
      </label>
      <input
        aria-invalid="false"
        class="sc-AxhUy ePtFHq"
        id="password"
        name="password"
        placeholder="Password"
        type="password"
        value=""
      />
      
    </div>
    <div>
      <button
        class="sc-AxheI dSQsuG"
        type="submit"
      >
        Save
      </button>
    </div>
  </fieldset>
</form>
`;

exports[`AuthForm when is registration renders without crashing 1`] = `
<form
  autocomplete="off"
  class="sc-AxjAm hYYXIy"
  novalidate=""
>
  <fieldset>
    <legend
      class="sc-AxirZ dBtpcc"
    >
      A legend
    </legend>
    <input
      name="isRegistration"
      type="hidden"
      value="YES"
    />
    <div
      class="sc-AxiKw bLDZyO"
    >
      <label
        class="sc-AxhCb ieTFEo"
        for="firstName"
      >
        First Name
      </label>
      <input
        aria-invalid="false"
        class="sc-AxhUy ePtFHq"
        id="firstName"
        name="firstName"
        placeholder="First Name"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="sc-AxiKw bLDZyO"
    >
      <label
        class="sc-AxhCb ieTFEo"
        for="lastName"
      >
        Last Name
      </label>
      <input
        aria-invalid="false"
        class="sc-AxhUy ePtFHq"
        id="lastName"
        name="lastName"
        placeholder="Last Name"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="sc-AxiKw bLDZyO"
    >
      <label
        class="sc-AxhCb ieTFEo"
        for="email"
      >
        E-mail
      </label>
      <input
        aria-invalid="false"
        class="sc-AxhUy ePtFHq"
        id="email"
        name="email"
        placeholder="E-mail"
        type="email"
        value=""
      />
      
    </div>
    <div
      class="sc-AxiKw bLDZyO"
    >
      <label
        class="sc-AxhCb ieTFEo"
        for="password"
      >
        Password
      </label>
      <input
        aria-invalid="false"
        class="sc-AxhUy ePtFHq"
        id="password"
        name="password"
        placeholder="Password"
        type="password"
        value=""
      />
      
    </div>
    <div>
      <button
        class="sc-AxheI dSQsuG"
        type="submit"
      >
        Save
      </button>
    </div>
  </fieldset>
</form>
`;
